PolishRuleCNLTool/src/Grammar/PolishRuleCNLParser.java
// Generated from PolishRuleCNL.g4 by ANTLR 4.4

	  package Grammar;
	
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PolishRuleCNLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__59=1, T__58=2, T__57=3, T__56=4, T__55=5, T__54=6, T__53=7, T__52=8, 
		T__51=9, T__50=10, T__49=11, T__48=12, T__47=13, T__46=14, T__45=15, T__44=16, 
		T__43=17, T__42=18, T__41=19, T__40=20, T__39=21, T__38=22, T__37=23, 
		T__36=24, T__35=25, T__34=26, T__33=27, T__32=28, T__31=29, T__30=30, 
		T__29=31, T__28=32, T__27=33, T__26=34, T__25=35, T__24=36, T__23=37, 
		T__22=38, T__21=39, T__20=40, T__19=41, T__18=42, T__17=43, T__16=44, 
		T__15=45, T__14=46, T__13=47, T__12=48, T__11=49, T__10=50, T__9=51, T__8=52, 
		T__7=53, T__6=54, T__5=55, T__4=56, T__3=57, T__2=58, T__1=59, T__0=60, 
		PolishLetter=61, Letter=62, Identifier=63, Srednik=64, Myslnik=65, Cyfry=66, 
		WS=67;
	public static final String[] tokenNames = {
		"<INVALID>", "'część'", "'zawsze'", "'mieć'", "'tego'", "'od'", "'fin'", 
		"'a wysoko'", "'się'", "'jeden'", "'minimum'", "'możliwość'", "'być'", 
		"'IDENTIFIER'", "'zawierać'", "'subst'", "'musieć'", "'co wysoko'", "'nie'", 
		"'każdy'", "'musić'", "'rodzaj'", "'oraz'", "'zabronić'", "'atrybut'", 
		"'składać'", "'z'", "'adj'", "'num'", "'niezależnie'", "'nigdy'", "'a'", 
		"'dokładnie'", "'gdy'", "'i'", "'wtedy'", "'że'", "'prep'", "'albo'", 
		"'maksimum'", "'tnum'", "'lub'", "'móc'", "'obowiązek'", "'adv'", "'co najwyżej'", 
		"'wszystko'", "'tylko'", "'to'", "'prawda'", "'jeśli'", "'składać się z'", 
		"'przynajmniej'", "'własność'", "'konieczny'", "'conj'", "'qub'", "'aby'", 
		"'comp'", "'ppas'", "'istnieć'", "PolishLetter", "Letter", "Identifier", 
		"';'", "'-'", "Cyfry", "WS"
	};
	public static final int
		RULE_korzen = 0, RULE_slownik = 1, RULE_regula = 2, RULE_logiczneSformulowania = 3, 
		RULE_modalneSformulowania = 4, RULE_sformułowanieModalneZlozone = 5, RULE_sformułowanieModalneProste = 6, 
		RULE_pojecieRzeczownikowe = 7, RULE_rzeczownik = 8, RULE_przymiotnik = 9, 
		RULE_imieslowPrzymiotnikowyBierny = 10, RULE_rzeczownikOkreslonyPrzymiotnikiem = 11, 
		RULE_rzeczownikOkreslajacy = 12, RULE_wyrazeniePrzyimkowe = 13, RULE_spójnik = 14, 
		RULE_przyimek = 15, RULE_fakt = 16, RULE_binarnyFakt = 17, RULE_charakterystyka = 18, 
		RULE_cechaRzeczownika = 19, RULE_czasownik = 20, RULE_relacja = 21, RULE_asocjacja = 22, 
		RULE_caloscCzesc = 23, RULE_generalizacja = 24, RULE_jestAtrybutem = 25, 
		RULE_czasownikByc = 26, RULE_sformulowanieRownowaznosc = 27, RULE_sformulowanieImplikacji = 28, 
		RULE_prostaImplikacja = 29, RULE_zlozonaImplikacja = 30, RULE_pojecieRzeczownikoweRelacjaPojecieRzeczownikowe = 31, 
		RULE_ograniczenieLicznosciowe = 32, RULE_sfurmulowanieLogiczneNegacja = 33, 
		RULE_pojecieRzeczownikoweZOkresleniem = 34, RULE_kwantyfikatorOgolny = 35, 
		RULE_operatorModalnyDlaKoniecznosci = 36, RULE_operatorModalnyCalosc = 37, 
		RULE_kwantyfikatorLicznosciowy = 38, RULE_minimumN = 39, RULE_minimum = 40, 
		RULE_liczba = 41, RULE_maksimumJeden = 42, RULE_coNajwyzejN = 43, RULE_coNajwyzej = 44, 
		RULE_dokladnieJeden = 45, RULE_dokladnieN = 46, RULE_dokładnie = 47, RULE_zakresLiczb = 48, 
		RULE_przynajmniejJeden = 49, RULE_operatorLogiczny = 50, RULE_logicznaNegacja = 51, 
		RULE_niejestPrawdaZe = 52, RULE_niePrawdaZe = 53, RULE_nie = 54, RULE_koniunkcja = 55, 
		RULE_i = 56, RULE_dysjunkcja = 57, RULE_oraz = 58, RULE_dysjunkcjaRozlaczna = 59, 
		RULE_implikacja = 60, RULE_koniecImplikacji = 61, RULE_rownowaznosc = 62, 
		RULE_tylkoGdy = 63, RULE_wtedyItylkoWtedyGdy = 64, RULE_sformulowanieNieZaleznosciElementow = 65, 
		RULE_operatorModalny = 66, RULE_sformulowanieObowiazku = 67, RULE_musi = 68, 
		RULE_jestObowiazkiemAby = 69, RULE_sformulowanieObowiazkuNegacja = 70, 
		RULE_nieMoze = 71, RULE_jestZabronioneAby = 72, RULE_sformulowanieKoniecznosci = 73, 
		RULE_zawsze = 74, RULE_jestKonieczneAby = 75, RULE_sformulowanieKoniecznosciNegacja = 76, 
		RULE_nigdy = 77, RULE_nieIstniejeMozliwoscZe = 78, RULE_sformulowanieMozliwosci = 79, 
		RULE_istniejeMozliwoscZe = 80, RULE_sformulowaniePozwolenia = 81, RULE_moze = 82, 
		RULE_nieMusi = 83;
	public static final String[] ruleNames = {
		"korzen", "slownik", "regula", "logiczneSformulowania", "modalneSformulowania", 
		"sformułowanieModalneZlozone", "sformułowanieModalneProste", "pojecieRzeczownikowe", 
		"rzeczownik", "przymiotnik", "imieslowPrzymiotnikowyBierny", "rzeczownikOkreslonyPrzymiotnikiem", 
		"rzeczownikOkreslajacy", "wyrazeniePrzyimkowe", "spójnik", "przyimek", 
		"fakt", "binarnyFakt", "charakterystyka", "cechaRzeczownika", "czasownik", 
		"relacja", "asocjacja", "caloscCzesc", "generalizacja", "jestAtrybutem", 
		"czasownikByc", "sformulowanieRownowaznosc", "sformulowanieImplikacji", 
		"prostaImplikacja", "zlozonaImplikacja", "pojecieRzeczownikoweRelacjaPojecieRzeczownikowe", 
		"ograniczenieLicznosciowe", "sfurmulowanieLogiczneNegacja", "pojecieRzeczownikoweZOkresleniem", 
		"kwantyfikatorOgolny", "operatorModalnyDlaKoniecznosci", "operatorModalnyCalosc", 
		"kwantyfikatorLicznosciowy", "minimumN", "minimum", "liczba", "maksimumJeden", 
		"coNajwyzejN", "coNajwyzej", "dokladnieJeden", "dokladnieN", "dokładnie", 
		"zakresLiczb", "przynajmniejJeden", "operatorLogiczny", "logicznaNegacja", 
		"niejestPrawdaZe", "niePrawdaZe", "nie", "koniunkcja", "i", "dysjunkcja", 
		"oraz", "dysjunkcjaRozlaczna", "implikacja", "koniecImplikacji", "rownowaznosc", 
		"tylkoGdy", "wtedyItylkoWtedyGdy", "sformulowanieNieZaleznosciElementow", 
		"operatorModalny", "sformulowanieObowiazku", "musi", "jestObowiazkiemAby", 
		"sformulowanieObowiazkuNegacja", "nieMoze", "jestZabronioneAby", "sformulowanieKoniecznosci", 
		"zawsze", "jestKonieczneAby", "sformulowanieKoniecznosciNegacja", "nigdy", 
		"nieIstniejeMozliwoscZe", "sformulowanieMozliwosci", "istniejeMozliwoscZe", 
		"sformulowaniePozwolenia", "moze", "nieMusi"
	};

	@Override
	public String getGrammarFileName() { return "PolishRuleCNL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PolishRuleCNLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class KorzenContext extends ParserRuleContext {
		public SlownikContext slownik() {
			return getRuleContext(SlownikContext.class,0);
		}
		public RegulaContext regula() {
			return getRuleContext(RegulaContext.class,0);
		}
		public KorzenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_korzen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterKorzen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitKorzen(this);
		}
	}

	public final KorzenContext korzen() throws RecognitionException {
		KorzenContext _localctx = new KorzenContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_korzen);
		try {
			setState(170);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168); slownik();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169); regula();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SlownikContext extends ParserRuleContext {
		public FaktContext fakt() {
			return getRuleContext(FaktContext.class,0);
		}
		public PojecieRzeczownikoweContext pojecieRzeczownikowe() {
			return getRuleContext(PojecieRzeczownikoweContext.class,0);
		}
		public SlownikContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_slownik; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterSlownik(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitSlownik(this);
		}
	}

	public final SlownikContext slownik() throws RecognitionException {
		SlownikContext _localctx = new SlownikContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_slownik);
		try {
			setState(174);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(172); pojecieRzeczownikowe();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(173); fakt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegulaContext extends ParserRuleContext {
		public ModalneSformulowaniaContext modalneSformulowania() {
			return getRuleContext(ModalneSformulowaniaContext.class,0);
		}
		public OgraniczenieLicznoscioweContext ograniczenieLicznosciowe() {
			return getRuleContext(OgraniczenieLicznoscioweContext.class,0);
		}
		public LogiczneSformulowaniaContext logiczneSformulowania() {
			return getRuleContext(LogiczneSformulowaniaContext.class,0);
		}
		public RegulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterRegula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitRegula(this);
		}
	}

	public final RegulaContext regula() throws RecognitionException {
		RegulaContext _localctx = new RegulaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regula);
		try {
			setState(179);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(176); ograniczenieLicznosciowe();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177); logiczneSformulowania();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(178); modalneSformulowania();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogiczneSformulowaniaContext extends ParserRuleContext {
		public SformulowanieRownowaznoscContext sformulowanieRownowaznosc() {
			return getRuleContext(SformulowanieRownowaznoscContext.class,0);
		}
		public SfurmulowanieLogiczneNegacjaContext sfurmulowanieLogiczneNegacja() {
			return getRuleContext(SfurmulowanieLogiczneNegacjaContext.class,0);
		}
		public SformulowanieImplikacjiContext sformulowanieImplikacji() {
			return getRuleContext(SformulowanieImplikacjiContext.class,0);
		}
		public LogiczneSformulowaniaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logiczneSformulowania; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterLogiczneSformulowania(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitLogiczneSformulowania(this);
		}
	}

	public final LogiczneSformulowaniaContext logiczneSformulowania() throws RecognitionException {
		LogiczneSformulowaniaContext _localctx = new LogiczneSformulowaniaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logiczneSformulowania);
		try {
			setState(184);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(181); sfurmulowanieLogiczneNegacja();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(182); sformulowanieRownowaznosc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(183); sformulowanieImplikacji();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModalneSformulowaniaContext extends ParserRuleContext {
		public SformułowanieModalneZlozoneContext sformułowanieModalneZlozone() {
			return getRuleContext(SformułowanieModalneZlozoneContext.class,0);
		}
		public SformułowanieModalneProsteContext sformułowanieModalneProste() {
			return getRuleContext(SformułowanieModalneProsteContext.class,0);
		}
		public ModalneSformulowaniaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modalneSformulowania; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterModalneSformulowania(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitModalneSformulowania(this);
		}
	}

	public final ModalneSformulowaniaContext modalneSformulowania() throws RecognitionException {
		ModalneSformulowaniaContext _localctx = new ModalneSformulowaniaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modalneSformulowania);
		try {
			setState(188);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186); sformułowanieModalneProste();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187); sformułowanieModalneZlozone();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SformułowanieModalneZlozoneContext extends ParserRuleContext {
		public PojecieRzeczownikoweZOkresleniemContext pojecieRzeczownikoweZOkresleniem(int i) {
			return getRuleContext(PojecieRzeczownikoweZOkresleniemContext.class,i);
		}
		public OperatorModalnyContext operatorModalny() {
			return getRuleContext(OperatorModalnyContext.class,0);
		}
		public List<PojecieRzeczownikoweZOkresleniemContext> pojecieRzeczownikoweZOkresleniem() {
			return getRuleContexts(PojecieRzeczownikoweZOkresleniemContext.class);
		}
		public SformułowanieModalneZlozoneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sformułowanieModalneZlozone; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterSformułowanieModalneZlozone(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitSformułowanieModalneZlozone(this);
		}
	}

	public final SformułowanieModalneZlozoneContext sformułowanieModalneZlozone() throws RecognitionException {
		SformułowanieModalneZlozoneContext _localctx = new SformułowanieModalneZlozoneContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sformułowanieModalneZlozone);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190); pojecieRzeczownikoweZOkresleniem();
			setState(191); operatorModalny();
			setState(192); pojecieRzeczownikoweZOkresleniem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SformułowanieModalneProsteContext extends ParserRuleContext {
		public OperatorModalnyContext operatorModalny() {
			return getRuleContext(OperatorModalnyContext.class,0);
		}
		public PojecieRzeczownikoweRelacjaPojecieRzeczownikoweContext pojecieRzeczownikoweRelacjaPojecieRzeczownikowe() {
			return getRuleContext(PojecieRzeczownikoweRelacjaPojecieRzeczownikoweContext.class,0);
		}
		public SformułowanieModalneProsteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sformułowanieModalneProste; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterSformułowanieModalneProste(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitSformułowanieModalneProste(this);
		}
	}

	public final SformułowanieModalneProsteContext sformułowanieModalneProste() throws RecognitionException {
		SformułowanieModalneProsteContext _localctx = new SformułowanieModalneProsteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sformułowanieModalneProste);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194); operatorModalny();
			setState(195); pojecieRzeczownikoweRelacjaPojecieRzeczownikowe();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PojecieRzeczownikoweContext extends ParserRuleContext {
		public WyrazeniePrzyimkoweContext wyrazeniePrzyimkowe() {
			return getRuleContext(WyrazeniePrzyimkoweContext.class,0);
		}
		public RzeczownikContext rzeczownik() {
			return getRuleContext(RzeczownikContext.class,0);
		}
		public RzeczownikOkreslonyPrzymiotnikiemContext rzeczownikOkreslonyPrzymiotnikiem() {
			return getRuleContext(RzeczownikOkreslonyPrzymiotnikiemContext.class,0);
		}
		public RzeczownikOkreslajacyContext rzeczownikOkreslajacy() {
			return getRuleContext(RzeczownikOkreslajacyContext.class,0);
		}
		public PojecieRzeczownikoweContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pojecieRzeczownikowe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).enterPojecieRzeczownikowe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolishRuleCNLListener ) ((PolishRuleCNLListener)listener).exitPojecieRzeczownikowe(this);
		}
	}
